--- a/im-startup/pom.xml
+++ b/im-startup/pom.xml
@@ -27,8 +27,8 @@
         <profile>
             <id>dev</id>
             <properties>
-                <java.home>F:\MyJava\jdk1.8.0_73</java.home>
-                <bootclasspath>${java.home}\jre\lib\rt.jar;${java.home}\jre\lib\jce.jar</bootclasspath>
+                <java_home>/Library/Java/JavaVirtualMachines/jdk1.8.0_144.jdk/Contents/Home</java_home>
+                <bootclasspath>${java_home}/jre/lib/rt.jar:${java_home}/jre/lib/jce.jar</bootclasspath>
             </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -113,6 +113,16 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.2</version>
+        </dependency>
         <!-- google -->
         <dependency>
             <groupId>com.google.guava</groupId>
